<resources>
    <string name="app_name" context="Not translate">MEGA</string>
    <string name="app_version" context="Not translate">3.0.5.official</string>
    <string name="sdk_version" context="Not translate">324f3e4</string>
    <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">MEGA is a secure cloud storage service that gives you 50 GB free storage space. Unlike other cloud storage providers, your data is encrypted and decrypted by your client devices only and never by us.\nUpload your files from your smartphone or tablet then search, store, download, stream, view, share, rename or delete your files any time, from any device, anywhere. Share folders with your contacts and see their updates in real time.\nThe encryption process means we cannot access or reset your password so you MUST remember it (unless you have your Master Key backed up) or you will lose access to your stored files.\nInside the app you can upgrade your storage space and bandwidth quota with a monthly or yearly subscription.\nPRO LITE subscription: 4.99 € per month or 49.99 € per year gives you 200 GB of storage space and 1 TB of bandwidth per month.\nPRO I subscription: 9.99 € per month or 99.99 € per year gives you 500 GB of storage space and 2 TB of bandwidth per month.\nPRO II subscription: 19.99 € per month or 199.99 € per year gives you 2 TB of storage space and 4 TB of bandwidth per month.\nPRO III subscription: 29.99 € per month or 299.99 € per year gives you 4 TB of storage space and 8 TB of bandwidth per month.\nSubscriptions are renewed automatically for successive subscription periods of the same duration and at the same price as the initial period chosen. To manage your subscriptions, simply click on the Play Store icon on your handset, sign in with your Google ID (if you haven\'t already done so) and then click on the MEGA app. You\'ll be able to manage your subscription there.\nFor more info, please check our website: \n https://mega.nz/mobile_terms.html \n https://mega.nz/mobile_privacy.html \nNew Terms of Service apply effective from 20 February 2016. See https://mega.nz/TermsOfService2016.pdf \n Note: For desktop access to your files Mega needs to use HTML5 compatible browsers to handle our advanced features. We recommend Mozilla Firefox and Google Chrome. However the mobile versions of browsers cannot access the Mega cloud storage system.</string>
    <string name="short_description_text" context="Short description text of the app in the Google Play page of the app">MEGA is Cloud Storage with Powerful Always-On Privacy. 50GB for free</string>
    <string name="general_total_size" context="label for the total file size of multiple files and/or folders (no need to put the colon punctuation in the translation)">Total size</string>
    <string name="general_x_of_x" context="Showing progress of elements. Example: 2 of 10."> of </string>
    <string name="general_yes" context="Answer for confirmation dialog.">Yes</string>
    <string name="general_no" context="Answer for confirmation dialog.">No</string>
    <string name="general_cancel" context="Answer for confirmation dialog.">Cancel</string>
    <string name="general_move_to" context="When moving a file to a location in MEGA. This is the text of the button after selection the destination">Move to</string>
    <string name="general_copy_to" context="When copying a file to a location in MEGA. This is the text of the button after selection the destination">Copy to</string>
    <string name="general_import_to" context="When importing a file to a location in MEGA. This is the text of the button after selection the destination">Import to</string>
    <string name="general_select" context="Selecting a specific location in MEGA. This is the text of the button">Select</string>
    <string name="general_select_to_upload" context="Selecting a specific location in MEGA. This is the text of the button">Select files</string>
    <string name="general_select_to_download" context="Selecting a specific location in MEGA. This is the text of the button">Select folder</string>
    <string name="general_create" context="This is the final button when creating a folder in the dialog where the user inserts the folder name">Create</string>
    <string name="general_upload" context="Button text when uploading a file to a previously selected location in MEGA">Upload File</string>
    <string name="general_download" context="Item menu option upon right click on one or multiple files.">Download</string>
    <string name="general_add" context="button">Add</string>
    <string name="general_move" context="button">Move</string>
    <string name="general_remove" context="button">Remove</string>
    <string name="general_share" context="button">Share</string>
   	<string name="general_confirm" context="button">Confirm</string>
   	<string name="general_leave" context="button">Leave</string>
   	<string name="general_decryp" context="button">Decrypt</string>
   	<string name="general_export" context="button">Export</string>
    <string name="general_empty" context="Button to delete the contents of the trashbin. Can also be translated as &quot;clear&quot;">Empty</string>
    <string name="general_loading" context="state previous to import a file">Loading</string>
    <string name="general_importing" context="state while importing the file">Importing</string>
    <string name="general_import" context="Import button. When the user clicks this button the file will be imported to his account.">Import</string>
    <string name="general_storage" context="Text listed before the amount of storage a user gets with a certain package. For example: &quot;1TB Storage&quot;.">Storage</string>
    <string name="general_bandwidth" context="Text listed before the amount of bandwidth a user gets with a certain package. For example: &quot;8TB Bandwidth&quot;. Can also be translated as data transfer.">Bandwidth</string>
    <string name="general_subscribe" context="Text placed inside the button the user clicks when upgrading to PRO. Meaning: subscribe to this plan">Subscribe</string>
    <string name="general_continue" context="Text placed inside the button the user clicks when clicking into the FREE account. Meaning: Continue to the main screen">Continue</string>
    <string name="general_error_word" context="It will be followed by the error message">Error</string>
    <string name="general_error_file_not_found" context="Message shown when a file doesn't exist">File link not found</string>
    <string name="general_error_folder_not_found" context="Message shown when a folder doesn't exist">Folder link not found</string>
    <string name="general_not_yet_implemented" context="when clicking into a menu whose functionality is not yet implemented">Not yet implemented</string>
    <string name="error_no_selection" context="when any file or folder is selected">No file or folder selected</string>
    <string name="general_already_downloaded" context="when trying to download a file that is already downloaded in the device">Already downloaded</string>
    <string name="general_already_uploaded" context="when trying to upload a file that is already uploaded in the folder">already uploaded</string>
    <string name="general_file_info" context="Label of the option menu. When clicking this button, the app shows the info of the file">File info</string>
    <string name="action_logout" context="Button where the user can sign off or logout">Logout</string>
    <string name="action_settings" context="Menu item">Settings</string>
    <string name="action_help" context="Menu item">Help</string>
    <string name="action_upgrade_account" context="Change from a free account to paying MEGA">Upgrade your account</string>
    <string name="login_text" context="Login button">Login</string>
    <string name="email_text" context="email label">E-mail</string>
    <string name="password_text" context="password label">Password</string>
    <string name="abc" context="in the password edittext the user can see the password or asterisks. ABC shows the letters of the password">ABC</string>
    <string name="new_to_mega" context="This question applies to users that do not have an account on MEGA yet">New to MEGA?</string>
    <string name="create_account" context="label and text button when creating the account">Create an account</string>
    <string name="login_generating_key" context="the first step when logging in is calculate the private and public encryption keys">Calculating encryption keys</string>
    <string name="login_connecting_to_server" context="Message displayed while the app is connecting to a MEGA server">Connecting to the server</string>
    <string name="download_updating_filelist" context="Status text when updating the file manager">Updating file list</string>
    <string name="login_querying_signup_link" context="when the user clicks on the link sent by MEGA after creating the account, this message is shown">Checking validation link</string>
    <string name="login_confirming_account" context="Attempting to activate a MEGA account for a user.">Activating account</string>
    <string name="tour_space_title">MEGA SPACE</string>
    <string name="tour_space_text">Register now and get 50 GB of free space</string>
    <string name="context_get_link" context="create a link of a file and send it using an app from the device">Share link</string>
    <string name="context_rename" context="Item menu option upon right click on one or multiple files.">Rename</string>
    <string name="context_move_to_trash" context="menu item">Move to Rubbish Bin</string>
    <string name="context_share_folder" context="menu item">Share folder</string>
    <string name="context_delete" context="menu item">Delete</string>
    <string name="menu_new_folder" context="Menu option to create a new folder in the file manager.">New folder</string>
    <string name="my_account_upgrade_pro" context="Button to upgrade the account to PRO account">Upgrade now!</string>
    <string name="warning_out_space" context="Warning in Cloud Drive when the user is runningut of space">You\'re running out of space!\n Do you want to upgrade your account?</string>
    <string name="settings_storage" context="Text listed before the amount of storage a user gets with a certain package. For example: &quot;1TB Storage&quot;.">Storage</string>
    <string name="settings_pin_lock" context="settings category title. Below this title, the pin lock settings start">PIN Lock</string>
    <string name="settings_storage_download_location" context="title of the setting to set the default download location">Default download location</string>
    <string name="settings_storage_ask_me_always" context="Whether to always ask the user each time.">Always ask for download location</string>
    <string name="settings_camera_upload_on" context="settings option">Enable Camera Uploads</string>
    <string name="settings_camera_upload_how_to_upload" context="settings option. How to upload the camera images: via Wi-Fi only or via Wi-Fi and data plan">How to upload</string>
    <string name="settings_camera_upload_what_to_upload" context="What kind of files are going to be uploaded: images, videos or both">File Upload</string>
    <string name="settings_pin_lock_on" context="settings of the pin lock">Enable PIN Lock</string>
    <string name="settings_pin_lock_code" context="settings of the pin lock">PIN Code</string>
    <string name="pin_lock_enter" context="Button after the pin code input field">Enter</string>
    <string name="settings_about" context="Caption of a title, in the context of &quot;About MEGA&quot; or &quot;About us&quot;">About</string>
    <string name="settings_about_app_version" context="App means &quot;Application&quot;">App version</string>
</resources>