<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory 
        android:key="settings_pin_lock"
        android:title="@string/settings_pin_lock">
        
         <Preference
	        android:key="settings_pin_lock_enable"
	        android:title="@string/settings_pin_lock_on" />
		
		<EditTextPreference
	        android:key="settings_pin_lock_code"
	        android:title="@string/settings_pin_lock_code"
	        android:password="true"
	        android:inputType="numberPassword" />
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:key="settings_camera_upload"
        android:title="@string/settings_camera_upload">
        
		<Preference
	        android:key="settings_camera_upload_on"
	        android:title="@string/settings_camera_upload_on" />
		
		<ListPreference
	        android:key="settings_camera_upload_how_to_upload"
	        android:title="@string/settings_camera_upload_how_to_upload"
	        android:entries="@array/settings_camera_upload_how_to_entries"
	        android:entryValues="@array/settings_camera_upload_how_to_values" />
		
		<ListPreference
	        android:key="settings_camera_upload_what_to_upload"
	        android:title="@string/settings_camera_upload_what_to_upload" 
	        android:entries="@array/settings_camera_upload_file_upload_entries"
	        android:entryValues="@array/settings_camera_upload_file_upload_values" />
		
		<Preference
	        android:key="settings_camera_upload_folder"
	        android:title="@string/settings_camera_upload_folder" />
	</PreferenceCategory>
	
    <PreferenceCategory 
        android:key="settings_storage"
        android:title="@string/settings_storage">
		
        <CheckBoxPreference
            android:key="settings_storage_ask_me_always"
        	android:title="@string/settings_storage_ask_me_always" />
        
		<Preference
	        android:key="settings_storage_download_location"
	        android:title="@string/settings_storage_download_location" />
	</PreferenceCategory>
	
    <PreferenceCategory 
        android:key="settings_about"
        android:title="@string/settings_about">
		
        <Preference
            android:key="settings_about_app_version"
        	android:title="@string/settings_about_app_version"
        	android:summary="@string/app_version" />
	</PreferenceCategory>
</PreferenceScreen>