<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:MEGA="http://schemas.android.com/apk/res-auto" >
    
    <item
        android:id="@+id/cab_menu_delete"
        android:orderInCategory="100"
        android:title="@string/context_delete"
        MEGA:showAsAction="never" />
    
    <item
        android:id="@+id/cab_menu_share_folder"
        android:orderInCategory="105"
        android:title="@string/context_share_folder"
        MEGA:showAsAction="never" />
    
    <item
        android:id="@+id/cab_menu_help"
        android:orderInCategory="115"
        android:title="@string/action_help"
        MEGA:showAsAction="never" />
    
    <item
        android:id="@+id/cab_menu_upgrade_account"
        android:orderInCategory="120"
        android:title="@string/action_upgrade_account"
        MEGA:showAsAction="never" />
    
    <item
        android:id="@+id/cab_menu_settings"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="125"
        android:title="@string/action_settings"
        MEGA:showAsAction="never" />           
    
</menu>

