<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:MEGA="http://schemas.android.com/apk/res-auto" >
    
    <item
        android:id="@+id/cab_menu_download"
        android:icon="@drawable/ic_menu_download_dark"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/general_download"
        MEGA:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/cab_menu_rename"
        android:icon="@drawable/ic_menu_rename_dark"
        android:orderInCategory="105"
        android:showAsAction="always"
        android:title="@string/context_rename"
        MEGA:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/cab_menu_copy"
        android:orderInCategory="110"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_copy_dark"
        android:title="@string/general_copy_to"
        MEGA:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/cab_menu_move"
        android:orderInCategory="115"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_move_dark"
        android:title="@string/general_move_to"
        MEGA:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/cab_menu_share_link"
        android:orderInCategory="120"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_download_link_dark"
        android:title="@string/context_get_link"
        MEGA:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/cab_menu_trash"
        android:icon="@drawable/ic_menu_discard_dark"
        android:orderInCategory="125"
        android:showAsAction="always"
        android:title="@string/context_move_to_trash"
        MEGA:showAsAction="ifRoom" />    

</menu>