<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_secondary"
    tools:context=".LoginActivity" >

	<LinearLayout 
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center" >
        
	    <LinearLayout 
	        android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="40dp"
            android:paddingTop="40dp" 
            android:background="@color/background"
            android:id="@+id/login_login_layout" >
	
		    <TextView
		        android:id="@+id/login_text_view"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="28sp"
		        android:textColor="@color/text_login"
		        android:text="@string/login_text"
		        android:layout_gravity="center" />
		    
		    <EditText
		        android:id="@+id/login_email_text"
		        android:inputType="textEmailAddress"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:hint="@string/email_text"
		        android:imeOptions="actionNext"
		        android:layout_gravity="center" 
		        style="@style/InputField" />		
		    
		    <EditText
		        android:id="@+id/login_password_text"
		        android:inputType="textPassword"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:hint="@string/password_text"
		        android:imeOptions="actionDone"
		        android:layout_gravity="center"
		        style="@style/InputField" />
		           
		    <TableLayout       		
       		    android:layout_width="wrap_content"
       		    android:layout_height="wrap_content" 
       		    android:layout_gravity="center" >
       		 	
		        <TableRow>
		            <ImageView
		                android:id="@+id/login_three_dots"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:src="@drawable/three_dots_background_white" 
		                android:layout_gravity="center_vertical|center_horizontal" 
		                android:paddingRight="5dp"
		                android:paddingTop="20dp"
		                android:layout_marginBottom="4dp"/>

		            <com.mega.components.MySwitch
				        android:id="@+id/switch_login"
				        style="@style/mySwitchStyle"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_marginBottom="0dp"
				        android:layout_marginRight="4dp"
				        android:layout_marginTop="8dp"
				        android:layout_marginLeft="1dp"
				        android:layout_gravity="center_vertical|center_horizontal"
				        mySwitch:textOff=""
				        mySwitch:textOn=""
				        mySwitch:textOnThumb="false"
				        mySwitch:thumb="@drawable/switch_thumb"
				        mySwitch:track="@drawable/switch_track_online" />
		            
		            <TextView 
	       			 	android:id="@+id/ABC"
	       			 	android:layout_width="wrap_content"
	       			 	android:layout_height="wrap_content"
	       			 	android:textSize="16sp"  
						android:layout_gravity="center_vertical|center_horizontal"
	       			 	android:text="@string/abc"
	       			 	android:layout_marginBottom="3dp"
				        android:layout_marginTop="0dp"
						android:textColor="@color/text_login"
       			 /> 
		        </TableRow>
            </TableLayout>
             
		    <Button
		        android:id="@+id/button_login_login"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:text="@string/login_text" 
		        android:layout_gravity="center"
                style="@style/button_MEGA" />
		
		</LinearLayout>
		
	    <include layout="@layout/delimiter" 
	        android:id="@+id/login_delimiter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/login_create_account_layout"
            android:gravity="center_horizontal"
            >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="@dimen/standard_margin"
                android:textColor="@color/text_login"
                android:text="@string/new_to_mega"
                />
            
            <Button
				android:id="@+id/button_create_account_login"
                style="@style/button_MEGA_inverse"
                android:layout_gravity="center"
                android:text="@string/create_account" >
            </Button>
            
        </LinearLayout>
        
        <LinearLayout
		    android:id="@+id/login_logging_in_layout"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:orientation="vertical"
		    android:gravity="center_horizontal|center_vertical" >
        
		    <ImageView 
		        android:id="@+id/login_mega_logo"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/login_mega_logo"
		        android:layout_marginTop="100dp"/>
		    
		    <TextView
		        android:id="@+id/login_query_signup_link_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/login_querying_signup_link"
		        android:layout_marginTop="30dp" />
		    
		    <TextView
		        android:id="@+id/login_generating_keys_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/login_generating_key"
		        android:layout_marginTop="30dp" />
		    
		    <TextView
		        android:id="@+id/login_confirm_account_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/login_confirming_account"
		        android:layout_marginTop="5dp" />
		    
		    <TextView
		        android:id="@+id/login_logging_in_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/login_connecting_to_server" 
		        android:layout_marginTop="5dp"/>
		    
		    <TextView
		        android:id="@+id/login_fetch_nodes_text"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/download_updating_filelist"
		        android:layout_marginTop="5dp" />
		    
		    <ProgressBar
		        android:id="@+id/login_progress_bar"
		        style="?android:attr/progressBarStyleLargeInverse"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:layout_marginTop="30dp" />
	    
	</LinearLayout>
	
	</LinearLayout>
	
</ScrollView>