<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mySwitch="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_secondary"
    tools:context=".LoginActivityLollipop" >

	<LinearLayout 
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center" >
        
	  	<LinearLayout 
	        android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="0dp"
            android:paddingTop="0dp" 
            android:background="@color/background" >
	       
	       <mega.privacy.android.app.components.LoopViewPager
	           android:id="@+id/pager"
	           android:layout_width="fill_parent"
	           android:layout_height="wrap_content"
	           android:layout_gravity="center" />
	       
	       <ImageView 
	           android:id="@+id/barTour"
	           android:layout_width="fill_parent"
	           android:layout_height="wrap_content" 
	           android:src="@drawable/tour01_bar" />
      
	  
		</LinearLayout>
 	
	    <include layout="@layout/delimiter" />

        <LinearLayout
            android:id="@+id/tour_login_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp" 
            android:paddingBottom="20dp"
            android:gravity="center_horizontal"
            >
	       
            <TextView
                android:id="@+id/tour_text_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginBottom="@dimen/standard_margin"
                android:textColor="@color/mega"
                android:text="@string/tour_space_title"
                />
            
            <TextView
                android:id="@+id/tour_text_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginBottom="@dimen/standard_margin"
                android:textColor="@color/text_login"
                android:text="@string/tour_space_text"
                />
            
            <Button
                android:id="@+id/button_login_tour"
                style="@style/button_MEGA"
                android:layout_gravity="center"
                android:text="@string/login_text"
                android:gravity="center" >
            </Button>
            
            <Button
                android:id="@+id/button_register_tour"
                style="@style/button_MEGA_inverse"
                android:layout_gravity="center"
                android:text="@string/create_account" 
                android:gravity="center" >
            </Button>
            
        </LinearLayout>

	</LinearLayout>
	
</ScrollView>