<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_background"
    tools:context=".FileBrowserListFragment" >

     <TextView
	    android:id="@+id/content_text"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingLeft="8dp"
	    android:paddingTop="3dp"
	    android:paddingBottom="3dp"
	    android:textColor="@color/white"
	    android:background="@color/content_text_folder"
	    android:textSize="14sp"/>
    
   <ImageView
	    android:id="@+id/file_list_empty_image"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="100dp"
	    android:layout_centerHorizontal="true" 
	    android:gravity="center_horizontal"/>
    
    <TextView
	    android:id="@+id/file_list_empty_text"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textColor="@color/text_secondary"
	    android:textSize="16sp"
	    android:layout_below="@id/file_list_empty_image"
	    android:layout_marginTop="@dimen/standard_margin"
	    android:layout_centerHorizontal="true"/>  
    
    
     <LinearLayout
         android:id="@+id/buttons_layout"
    	 android:layout_width="fill_parent"
    	 android:layout_height="wrap_content"
    	 android:layout_alignParentBottom="true"
    	 android:layout_gravity="center|fill_horizontal"
    	 android:orientation="horizontal">

         <Button
             android:id="@+id/btnLeft_new"
             android:layout_width="fill_parent"
       		android:layout_height="48dp"
       		android:layout_weight="1"
             android:background="@drawable/grey_btn_default_holo_light"
             android:textColor="@color/button_text"
             android:text="@string/menu_new_folder" />
         
         <Button
             android:id="@+id/btnRight_upload"
             android:layout_width="fill_parent"
       		android:layout_height="48dp"
       		android:layout_weight="1"
             android:background="@drawable/btn_default_holo_light_without_corners"
             android:textColor="@color/button_text"
             android:text="@string/general_upload" />
      </LinearLayout>    
      
      <LinearLayout
         android:id="@+id/out_space"
    	 android:layout_width="fill_parent"
    	 android:layout_height="wrap_content"
    	 android:layout_alignParentBottom="true"
    	 android:layout_gravity="center|fill_horizontal"
    	 android:layout_centerHorizontal="true"
    	 android:orientation="vertical">

		<TextView
		    android:id="@+id/out_space_text"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textColor="@color/white"
		    android:textStyle="bold"
		    android:paddingTop="20dp"
		    android:paddingBottom="20dp"
		    android:paddingLeft="20dp"
		    android:paddingRight="20dp"
		    android:gravity="center"
		    android:background="@color/navigation_drawer_background"
		    android:textSize="16sp"
		    android:text="@string/warning_out_space"/>  
         
         <Button
            android:id="@+id/out_space_btn"
       		android:layout_height="48dp"       		
       		android:layout_width="fill_parent"
            android:background="@drawable/btn_default_holo_light_without_corners"
            android:textColor="@color/button_text"
            android:text="@string/my_account_upgrade_pro" />
     </LinearLayout>          
		 
	 <ListView
        android:id="@+id/file_list_view_browser"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:choiceMode="multipleChoice"
        android:layout_below="@id/content_text"
        android:layout_above="@id/buttons_layout">
    </ListView>

      <Button
       	android:id="@+id/file_list_browser_camera_upload_on_off"
       	android:layout_gravity="center"
       	android:layout_height="48dp"
       	android:layout_width="fill_parent"
       	android:layout_alignParentBottom="true"
       	android:background="@drawable/btn_default_holo_light_without_corners"
       	android:textColor="@color/button_text"
       	android:text="@string/settings_camera_upload_on"
       	android:visibility="gone"
       	android:layout_below="@id/buttons_layout">
    </Button>
    
     <Button
       	android:id="@+id/file_explorer_button"
       	android:layout_gravity="center"
       	android:layout_height="55dp"
       	android:layout_width="fill_parent"
       	android:layout_alignParentBottom="true"
       	android:background="@drawable/btn_default_holo_light_without_corners"
       	android:textColor="@color/button_text"
       	android:visibility="gone"
       	android:layout_below="@id/buttons_layout">
    </Button>   

</RelativeLayout>